start making code to calculate resonances a class

--- a/elastic_constants/get irreducible elastic constants from LabView.ipynb
+++ b/elastic_constants/get irreducible elastic constants from LabView.ipynb
@@ -43,22 +43,26 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array(['1035kHz_down.dat', '1150kHz_down_clean.dat',\n",
-       "       '1221kHz_up_clean.dat', '1275kHz_up_clean.dat', '1355kHz_down.dat',\n",
-       "       '1428kHz_down_clean.dat', '1508kHz_down_clean.dat',\n",
-       "       '1677kHz_up_clean.dat', '1702kHz_up_clean.dat',\n",
-       "       '1805kHz_up_clean.dat', '1894kHz_up_clean.dat',\n",
-       "       '1968kHz_down_clean.dat', '2003kHz_up_clean.dat',\n",
-       "       '2096kHz_up_clean.dat', '2176kHz_down.dat', '2234kHz_up_clean.dat',\n",
-       "       '2322kHz_down_clean.dat', '2338kHz_up.dat',\n",
-       "       '2367kHz_down_clean.dat', '2420kHz_down.dat',\n",
-       "       '2454kHz_up_clean.dat', '2475kHz_up_clean.dat', '2502kHz_up.dat',\n",
-       "       '2522kHz_up_clean.dat', '2578kHz_down_clean.dat', '2585kHz_up.dat',\n",
-       "       '2641kHz_up_clean.dat', '2663kHz_up_clean.dat', '2706kHz_down.dat',\n",
-       "       '2750kHz_down.dat', '2791kHz_down.dat', '2824kHz_up_clean.dat',\n",
-       "       '2865kHz_up.dat', '2919kHz_down.dat', '3091kHz_up_clean.dat',\n",
-       "       '3107kHz_up.dat', '3397kHz_up_clean.dat', '909kHz_up_clean.dat'],\n",
-       "      dtype='<U22')"
+       "array(['1013_no_outliers_cooling.dat', '1207_no_outliers_cooling.dat',\n",
+       "       '1266_no_outliers_cooling.dat', '1282_no_outliers_cooling.dat',\n",
+       "       '1340_no_outliers_cooling.dat', '1421_no_outliers_cooling.dat',\n",
+       "       '1549_no_outliers_cooling.dat', '1671_no_outliers_cooling.dat',\n",
+       "       '1746_no_outliers_cooling.dat', '1763_no_outliers_cooling.dat',\n",
+       "       '1793_no_outliers_cooling.dat', '1817_no_outliers_cooling.dat',\n",
+       "       '1994_no_outliers_cooling.dat', '2008_no_outliers_cooling.dat',\n",
+       "       '2053_no_outliers_cooling.dat', '2134_no_outliers_cooling.dat',\n",
+       "       '2172_no_outliers_cooling.dat', '2200_no_outliers_cooling.dat',\n",
+       "       '2225_no_outliers_cooling.dat', '2311_no_outliers_cooling.dat',\n",
+       "       '2335_no_outliers_cooling.dat', '2391_no_outliers_cooling.dat',\n",
+       "       '2423_no_outliers_cooling.dat', '2453_no_outliers_cooling.dat',\n",
+       "       '2494_no_outliers_cooling.dat', '2513_no_outliers_cooling.dat',\n",
+       "       '2560_no_outliers_cooling.dat', '2582_no_outliers_cooling.dat',\n",
+       "       '2585_no_outliers_cooling.dat', '2634_no_outliers_cooling.dat',\n",
+       "       '2672_no_outliers_cooling.dat', '2706_no_outliers_cooling.dat',\n",
+       "       '2744_no_outliers_cooling.dat', '2800_no_outliers_cooling.dat',\n",
+       "       '2822_no_outliers_cooling.dat', '2858_no_outliers_cooling.dat',\n",
+       "       '2904_no_outliers_cooling.dat', '717_no_outliers_cooling.dat',\n",
+       "       '806_no_outliers_cooling.dat'], dtype='<U28')"
       ]
      },
      "metadata": {},
@@ -72,7 +76,7 @@
     "# project = \"\\\\Mn3Ge\\\\RUS\\\\Mn3Ge_2001B\\\\temp_dependent_data_with_Labview\\\\improved_setup\\\\new_data\"\n",
     "# project = \"\\\\Mn3.019Sn0.981\\\\RUS\\\\2007A\\\\good_data\"\n",
     "project = \"/UTe2/RUS/UTe2_2007C/PLL/good data\"\n",
-    "# project = \"/UTe2/RUS/UTe2_2007C/Red Pitaya/good_data\"\n",
+    "project = \"/UTe2/RUS/UTe2_2007C/Red Pitaya/good_data\"\n",
     "\n",
     "\n",
     "data_files = os.listdir(folder+project)\n",
