finish implementing logarithmic derivatives

--- a/elastic_constants/get irreducible elastic constants from LabView.ipynb
+++ b/elastic_constants/get irreducible elastic constants from LabView.ipynb
@@ -43,26 +43,22 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array(['1013_no_outliers_cooling.dat', '1207_no_outliers_cooling.dat',\n",
-       "       '1266_no_outliers_cooling.dat', '1282_no_outliers_cooling.dat',\n",
-       "       '1340_no_outliers_cooling.dat', '1421_no_outliers_cooling.dat',\n",
-       "       '1549_no_outliers_cooling.dat', '1671_no_outliers_cooling.dat',\n",
-       "       '1746_no_outliers_cooling.dat', '1763_no_outliers_cooling.dat',\n",
-       "       '1793_no_outliers_cooling.dat', '1817_no_outliers_cooling.dat',\n",
-       "       '1994_no_outliers_cooling.dat', '2008_no_outliers_cooling.dat',\n",
-       "       '2053_no_outliers_cooling.dat', '2134_no_outliers_cooling.dat',\n",
-       "       '2172_no_outliers_cooling.dat', '2200_no_outliers_cooling.dat',\n",
-       "       '2225_no_outliers_cooling.dat', '2311_no_outliers_cooling.dat',\n",
-       "       '2335_no_outliers_cooling.dat', '2391_no_outliers_cooling.dat',\n",
-       "       '2423_no_outliers_cooling.dat', '2453_no_outliers_cooling.dat',\n",
-       "       '2494_no_outliers_cooling.dat', '2513_no_outliers_cooling.dat',\n",
-       "       '2560_no_outliers_cooling.dat', '2582_no_outliers_cooling.dat',\n",
-       "       '2585_no_outliers_cooling.dat', '2634_no_outliers_cooling.dat',\n",
-       "       '2672_no_outliers_cooling.dat', '2706_no_outliers_cooling.dat',\n",
-       "       '2744_no_outliers_cooling.dat', '2800_no_outliers_cooling.dat',\n",
-       "       '2822_no_outliers_cooling.dat', '2858_no_outliers_cooling.dat',\n",
-       "       '2904_no_outliers_cooling.dat', '717_no_outliers_cooling.dat',\n",
-       "       '806_no_outliers_cooling.dat'], dtype='<U28')"
+       "array(['1035kHz_down.dat', '1150kHz_down_clean.dat',\n",
+       "       '1221kHz_up_clean.dat', '1275kHz_up_clean.dat', '1355kHz_down.dat',\n",
+       "       '1428kHz_down_clean.dat', '1508kHz_down_clean.dat',\n",
+       "       '1677kHz_up_clean.dat', '1702kHz_up_clean.dat',\n",
+       "       '1805kHz_up_clean.dat', '1894kHz_up_clean.dat',\n",
+       "       '1968kHz_down_clean.dat', '2003kHz_up_clean.dat',\n",
+       "       '2096kHz_up_clean.dat', '2176kHz_down.dat', '2234kHz_up_clean.dat',\n",
+       "       '2322kHz_down_clean.dat', '2338kHz_up.dat',\n",
+       "       '2367kHz_down_clean.dat', '2420kHz_down.dat',\n",
+       "       '2454kHz_up_clean.dat', '2475kHz_up_clean.dat', '2502kHz_up.dat',\n",
+       "       '2522kHz_up_clean.dat', '2578kHz_down_clean.dat', '2585kHz_up.dat',\n",
+       "       '2641kHz_up_clean.dat', '2663kHz_up_clean.dat', '2706kHz_down.dat',\n",
+       "       '2750kHz_down.dat', '2791kHz_down.dat', '2824kHz_up_clean.dat',\n",
+       "       '2865kHz_up.dat', '2919kHz_down.dat', '3091kHz_up_clean.dat',\n",
+       "       '3107kHz_up.dat', '3397kHz_up_clean.dat', '909kHz_up_clean.dat'],\n",
+       "      dtype='<U22')"
       ]
      },
      "metadata": {},
@@ -76,7 +72,7 @@
     "# project = \"\\\\Mn3Ge\\\\RUS\\\\Mn3Ge_2001B\\\\temp_dependent_data_with_Labview\\\\improved_setup\\\\new_data\"\n",
     "# project = \"\\\\Mn3.019Sn0.981\\\\RUS\\\\2007A\\\\good_data\"\n",
     "project = \"/UTe2/RUS/UTe2_2007C/PLL/good data\"\n",
-    "project = \"/UTe2/RUS/UTe2_2007C/Red Pitaya/good_data\"\n",
+    "# project = \"/UTe2/RUS/UTe2_2007C/Red Pitaya/good_data\"\n",
     "\n",
     "\n",
     "data_files = os.listdir(folder+project)\n",
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +181,7 @@
     "mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n",
     "# labels = ([str(np.round(i[-1]/1e3, 0))[:-2]+' kHz' for i in fraw])\n",
     "labels = ([str(np.round(i[-1], 0))[:-2]+' kHz' for i in fraw])\n",
+    "labels = [ (j, np.round(i[-1], 0) ) for j, i in enumerate(fraw)]\n",
     "# labels = ['most A1g1', 'most A1g2', 'most A1g3', 'most E1g', 'most E2g']\n",
     "\n",
     "\n",
@@ -193,36 +190,73 @@
     "shift = [5, 4.6, 3.5, 1.7, 1.7, 0.5, 0, -2.1]\n",
     "shift = [0, -6, 0, 0, 0, 0, 0]\n",
     "# shift = [0, 3.5, 0, 0, 0, 1.7, 1.3, 0, -0.2, 0, 0]\n",
+    "shift = [2*i*1e-5 for i,j in enumerate(fraw)] # for red pitaya\n",
+    "shift = [i/20 for i,j in enumerate(fraw)] # for PLL\n",
     "\n",
     "plt.figure(figsize=(9.5,7))\n",
     "palette = plt.get_cmap('viridis')\n",
     "k=0\n",
-    "for i in np.arange(len(Traw)):\n",
-    "# for i in [4, 12, 16, 1, 5]:\n",
-    "\n",
-    "# for i in [1,5,6,8]:\n",
-    "    # plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1]*1e5)[mask[i]], s=10, color=palette(i/(len(Traw)-1)), label=labels[i])\n",
-    "    plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])*1e-3)[mask[i]], s=10, color=palette(i/(len(Traw)-1)), label=labels[i])\n",
-    "\n",
-    "    # plt.plot(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1]*1e5)[mask[i]], linewidth=5, color=palette(i/2/(len(Traw)/2-1)), label=labels[i])\n",
-    "    # plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1]*1e2)[mask[i]], s=5, label=labels[k])\n",
-    "    \n",
-    "    # plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1]*1e5)[mask[i]]+shift[i], s=10, color=palette((k)/(3)), label=labels[i])\n",
+    "for i in np.arange(len(Traw))[0:15]:\n",
+    "    # plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])*1e-3)[mask[i]]+shift[k], s=50, color=palette(i/(len(Traw)-1)), label=labels[i])\n",
+    "    plt.plot(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1]))[mask[i]]+shift[k], linewidth=10, color=palette(k/15), label=labels[i])\n",
     "    k=k+1\n",
     "\n",
-    "# for i in [1, 2, 4, 5]:\n",
-    "#     plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1]*1e5)[mask[i]]+shift[i], s=10, color='gray')\n",
     "\n",
     "plt.xlabel('T (K)',fontsize=22)\n",
     "# plt.ylabel('$\\\\mathrm{\\\\Delta f / f}$ $(10^{-5})$',fontsize=22)\n",
     "plt.ylabel('$\\\\mathrm{\\\\Delta f / f}$ $(10^{-5})$',fontsize=22)\n",
     "plt.xlim(Tmin-0.01, Tmax+0.01)\n",
-    "#plt.legend(fontsize=18, markerscale=4)\n",
+    "plt.legend(fontsize=18, markerscale=4)\n",
     "plt.tick_params(axis=\"both\",direction=\"in\", labelsize=20, bottom='True', top='True', left='True', right='True', \n",
     "                length=4, width=1, which = 'major')\n",
     "\n",
     "# plt.ylim(-1,6)\n",
     "# plt.legend(fontsize=20)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tmin = 1.29\n",
+    "Tmax = 1.65\n",
+    "mask = np.array([(i > Tmin) & (i < Tmax) for i in Traw])\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(10.5,7.8))\n",
+    "palette = plt.get_cmap('viridis')\n",
+    "\n",
+    "k=0\n",
+    "# UTe2 Red Pitaya\n",
+    "index = [7,8,12,18,22,23,29,37,40,42]\n",
+    "shift = [i/5 for i,j in enumerate(index)]\n",
+    "shift = [-.2,-.3,.55,.4,1.4,1.2,2.4,3.4,3.6,4]\n",
+    "labels = ([str(np.round(i[-1], 0))[:-2]+' kHz' for i in fraw])\n",
+    "# UTe2 PLL\n",
+    "index = [1,4,5,7,8,10,12,13,17,18,19,21,22,24,26,27,29,31,32,34,36] # this is a preselection of decent resonances\n",
+    "index = [10,18,19,26,27,36]\n",
+    "shift = [0, 0.5, .85, 1.05, 2.15, 2.3]\n",
+    "labels = ([str(np.round(i[-1]/1e3, 0))[:-2]+' kHz' for i in fraw])\n",
+    "for i in index:\n",
+    "    # plt.scatter(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1])[mask[i]]/1e-5 + shift[k], s=100, color=palette(k/9), label=labels[i])\n",
+    "    plt.plot(Traw[i][mask[i]], ((fraw[i]-fraw[i][-1])/fraw[i][-1])[mask[i]]/1e-5+shift[k], linewidth=10, color=palette(k/(len(index)-1)), label=labels[i])\n",
+    "    k+=1\n",
+    "\n",
+    "   \n",
+    "plt.xlabel('T (K)',fontsize=24)\n",
+    "\n",
+    "plt.ylabel('$\\\\mathrm{\\\\Delta f / f}$ $(10^{-5})$',fontsize=24)\n",
+    "plt.xlim(Tmin-0.01, Tmax+0.01)\n",
+    "plt.legend(fontsize=18, markerscale=4)\n",
+    "plt.tick_params(axis=\"both\",direction=\"in\", labelsize=22, bottom='True', top='True', left='True', right='True', \n",
+    "                length=4, width=1, which = 'major')\n",
+    "\n",
+    "# plt.ylim(-1,6)\n",
+    "plt.legend(fontsize=20)\n",
     "\n",
     "plt.show()"
    ]
@@ -985,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
