--- a/elastic_constants/import binaries.ipynb
+++ b/elastic_constants/import binaries.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -23,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +34,9 @@
     "import os\n",
     "from scipy import odr\n",
     "import time\n",
+    "from scipy.optimize import curve_fit\n",
+    "import circle_fit as cf\n",
+    "from sklearn.datasets import make_circles\n",
     "\n",
     "%matplotlib qt"
    ]
@@ -46,16 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "576"
+      "text/plain": [
+       "16"
+      ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 129
     }
    ],
    "source": [
@@ -64,6 +70,7 @@
     "#project = \"\\\\Chromium\\\\Individual scans\\\\down\"\n",
     "project = '/UTe2/RUS/UTe2_2007C/Red Pitaya/200818/monitor_2/individual scans'\n",
     "#project = '/UTe2/RUS/UTe2_2007C/Red Pitaya/200819/frequency scans'\n",
+    "project = '\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201211' #4.04620K_950_1550_2.00000V_0.00000T_Dec11-2020__14-15-22_001_121120.bin\n",
     "\n",
     "data_files = os.listdir(folder+project)\n",
     "data_files = [i for i in data_files if i[-4:]=='.bin']\n",
@@ -76,7 +83,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4.0462"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 130
+    }
+   ],
+   "source": [
+    "T[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201211\\\\4.04620K_950_1550_2.00000V_0.00000T_Dec11-2020__14-15-22_001_121120.bin']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 131
+    }
+   ],
+   "source": [
+    "filenames = [filenames[7]]\n",
+    "filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +143,9 @@
     "N = 1\n",
     "M = 137\n",
     "K = len(f)-50\n",
-    "f = np.array(f)[M:K:N]\n",
-    "x = np.array(x)[M:K:N]\n",
-    "y = np.array(y)[M:K:N]\n",
+    "f = np.array(f)#[M:K:N]\n",
+    "x = np.array(x)#[M:K:N]\n",
+    "y = np.array(y)#[M:K:N]\n",
     "\n",
     "# f = [np.array(f)[2]]\n",
     "# x = [np.array(x)[2]]\n",
@@ -113,16 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "389"
+      "text/plain": [
+       "1"
+      ]
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 133
     }
    ],
    "source": [
@@ -131,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +196,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fflat = f.flatten()\n",
+    "xflat = x.flatten()\n",
+    "yflat = y.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Program Files\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3417: RankWarning: Polyfit may be poorly conditioned\n  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x23259eb50b8>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 136
+    }
+   ],
+   "source": [
+    "mask = (fflat>1530.65) & (fflat<1531.03)\n",
+    "# mask = (fflat>968.2) & (fflat<968.86)\n",
+    "fmask = fflat[mask]\n",
+    "xmask = xflat[mask]\n",
+    "ymask = yflat[mask]\n",
+    "\n",
+    "fitmask = (fmask > 1530.95) | (fmask < 1530.72)\n",
+    "# fitmask = (fmask > 968.83) | (fmask < 968.23)\n",
+    "ffitmask = fmask[fitmask]\n",
+    "xfitmask = xmask[fitmask]\n",
+    "yfitmask = ymask[fitmask]\n",
+    "\n",
+    "xfit = np.polyval(np.polyfit(ffitmask, xfitmask, 9), fmask)\n",
+    "yfit = np.polyval(np.polyfit(ffitmask, yfitmask, 3), fmask)\n",
+    "\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(fmask, xmask, 'o-', zorder=0)\n",
+    "plt.plot(fmask, xfit, zorder=2)\n",
+    "plt.scatter(ffitmask, xfitmask, c='red', zorder=1)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(fmask, ymask, 'o-', zorder=0)\n",
+    "plt.plot(fmask, yfit, zorder=2)\n",
+    "plt.scatter(ffitmask, yfitmask, c='red', zorder=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x23260b43f98>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "source": [
+    "real = xmask-xfit\n",
+    "imaginary = ymask-yfit\n",
+    "\n",
+    "amp = np.sqrt( real**2 + imaginary**2 )\n",
+    "phase = np.arctan(imaginary/real)\n",
+    "phase = phase / max(phase) * max(amp)/2 + max(amp)/2\n",
+    "\n",
+    "phasemask = (fmask>1530.78) & (fmask<1530.898)\n",
+    "plt.plot( fmask, amp, 'o-')\n",
+    "plt.plot(fmask[phasemask], phase[phasemask], 'o-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Text(0, 0.5, 'Amplitude (mV)')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 164
+    }
+   ],
+   "source": [
+    "def lorentzian(x, a, x0, b):\n",
+    "    return b / ((x-x0)**2 + a**2) / np.pi\n",
+    "\n",
+    "\n",
+    "guess = [0.03, 1530.8, 1]\n",
+    "# guess = [0.03, 968.517, 1]\n",
+    "\n",
+    "lorentzian_mask = (fmask>1530.8) & (fmask<1530.89)\n",
+    "# lorentzian_mask = (fmask>968.3) & (fmask<968.75)\n",
+    "\n",
+    "popt, pcov = curve_fit (lorentzian, fmask[lorentzian_mask], amp[lorentzian_mask], p0=guess)\n",
+    "fit = lorentzian(fmask, popt[0], popt[1], popt[2])\n",
+    "\n",
+    "plt.plot(fmask, amp*1e3, 'o-')\n",
+    "plt.plot(fmask[lorentzian_mask], fit[lorentzian_mask]*1e3)\n",
+    "plt.xlabel('f (kHz)', fontsize=16)\n",
+    "plt.ylabel('Amplitude (mV)', fontsize=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x2325fd9ebe0>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 141
+    }
+   ],
+   "source": [
+    "plt.figure(figsize=(6,6))\n",
+    "plt.scatter(xmask, ymask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = np.array(list(zip(xmask, ymask)))\n",
+    "xc, yc, r, s = cf.hyper_fit(coordinates)\n",
+    "\n",
+    "cf.plot_data_circle(xmask, ymask, xc, yc, r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,17 +490,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "it takes 3.3 s\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fct (p, f):\n",
     "    a = 0\n",
@@ -324,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,17 +688,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "it takes 0.7 s\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "index = np.array([abs(np.array(i) - 1) < 0.0000001 for i in Rn])\n",
     "maxf = np.array([ffit[i][index[i]] for i in np.arange(len(index))])\n",
@@ -478,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
