start adding class for getting temp dep of c

--- a/elastic_constants/get irreducible elastic constants from LabView.ipynb
+++ b/elastic_constants/get irreducible elastic constants from LabView.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -47,12 +47,13 @@
        "       '1365_no_outliers_cooling.dat', '1376_no_outliers_cooling.dat',\n",
        "       '1435_no_outliers_cooling.dat',\n",
        "       '1596_no_outliers_cooling_clean.dat',\n",
-       "       '1701_no_outliers_cooling.dat', '1745_no_outliers_cooling.dat',\n",
-       "       '1829_no_outliers_cooling.dat'], dtype='<U34')"
+       "       '1701_no_outliers_cooling_clean.dat',\n",
+       "       '1745_no_outliers_cooling_clean.dat',\n",
+       "       '1829_no_outliers_cooling_clean.dat'], dtype='<U34')"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 20
     }
    ],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
