--- a/elastic_constants/import binaries.ipynb
+++ b/elastic_constants/import binaries.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,48 +83,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "4.0462"
+       "['4.04071K_950_1550_2.00000V_0.00000T_Dec11-2020__14-31-59_001_121120.bin',\n",
+       " '4.04258K_1500_2050_2.00000V_0.00000T_Dec11-2020__14-49-01_001_121120.bin',\n",
+       " '4.04315K_2000_2550_2.00000V_0.00000T_Dec11-2020__15-22-47_001_121120.bin',\n",
+       " '4.04470K_2500_3050_2.00000V_0.00000T_Dec11-2020__15-58-12_001_121120.bin',\n",
+       " '4.04486K_1500_2050_2.00000V_0.00000T_Dec11-2020__15-05-38_001_121120.bin',\n",
+       " '4.04576K_400_1000_2.00000V_0.00000T_Dec11-2020__13-15-22_001_121120.bin',\n",
+       " '4.04590K_200_500_2.00000V_0.00000T_Dec11-2020__13-58-01_001_121120.bin',\n",
+       " '4.04620K_950_1550_2.00000V_0.00000T_Dec11-2020__14-15-22_001_121120.bin',\n",
+       " '4.04629K_400_1000_2.00000V_0.00000T_Dec11-2020__13-31-59_001_121120.bin',\n",
+       " '4.04641K_200_500_2.00000V_0.00000T_Dec11-2020__14-06-20_001_121120.bin',\n",
+       " '4.04753K_2000_2550_2.00000V_0.00000T_Dec11-2020__15-39-24_001_121120.bin',\n",
+       " '4.04809K_3000_3550_2.00000V_0.00000T_Dec11-2020__16-36-07_001_121120.bin',\n",
+       " '4.04994K_2500_3050_2.00000V_0.00000T_Dec11-2020__16-14-49_001_121120.bin',\n",
+       " '4.05025K_3500_4050_2.00000V_0.00000T_Dec11-2020__17-10-47_001_121120.bin',\n",
+       " '4.05187K_3000_3550_2.00000V_0.00000T_Dec11-2020__16-52-44_001_121120.bin',\n",
+       " '4.05604K_3500_4050_2.00000V_0.00000T_Dec11-2020__17-27-25_001_121120.bin']"
       ]
      },
      "metadata": {},
-     "execution_count": 130
+     "execution_count": 106
     }
    ],
    "source": [
-    "T[7]"
+    "data_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201211\\\\4.04620K_950_1550_2.00000V_0.00000T_Dec11-2020__14-15-22_001_121120.bin']"
+       "['C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201211\\\\4.04470K_2500_3050_2.00000V_0.00000T_Dec11-2020__15-58-12_001_121120.bin']"
       ]
      },
      "metadata": {},
-     "execution_count": 131
+     "execution_count": 107
     }
    ],
    "source": [
-    "filenames = [filenames[7]]\n",
+    "filenames = [filenames[3]]\n",
     "filenames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +187,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 133
+     "execution_count": 109
     }
    ],
    "source": [
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,41 +222,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "C:\\Program Files\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3417: RankWarning: Polyfit may be poorly conditioned\n  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x23259eb50b8>"
+       "<matplotlib.collections.PathCollection at 0x1cc160af1f0>"
       ]
      },
      "metadata": {},
-     "execution_count": 136
+     "execution_count": 112
     }
    ],
    "source": [
-    "mask = (fflat>1530.65) & (fflat<1531.03)\n",
+    "mask = (fflat>2500.01) & (fflat<3000)\n",
     "# mask = (fflat>968.2) & (fflat<968.86)\n",
     "fmask = fflat[mask]\n",
     "xmask = xflat[mask]\n",
     "ymask = yflat[mask]\n",
     "\n",
-    "fitmask = (fmask > 1530.95) | (fmask < 1530.72)\n",
+    "fitmask = (fmask > 2500.01) | (fmask < 3000)\n",
     "# fitmask = (fmask > 968.83) | (fmask < 968.23)\n",
     "ffitmask = fmask[fitmask]\n",
     "xfitmask = xmask[fitmask]\n",
     "yfitmask = ymask[fitmask]\n",
     "\n",
-    "xfit = np.polyval(np.polyfit(ffitmask, xfitmask, 9), fmask)\n",
+    "xfit = np.polyval(np.polyfit(ffitmask, xfitmask, 3), fmask)\n",
     "yfit = np.polyval(np.polyfit(ffitmask, yfitmask, 3), fmask)\n",
     "\n",
     "\n",
@@ -258,18 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x23260b43f98>]"
+       "[<matplotlib.lines.Line2D at 0x1cc109a54f0>]"
       ]
      },
      "metadata": {},
-     "execution_count": 148
+     "execution_count": 113
     }
    ],
    "source": [
@@ -280,9 +288,89 @@
     "phase = np.arctan(imaginary/real)\n",
     "phase = phase / max(phase) * max(amp)/2 + max(amp)/2\n",
     "\n",
-    "phasemask = (fmask>1530.78) & (fmask<1530.898)\n",
-    "plt.plot( fmask, amp, 'o-')\n",
-    "plt.plot(fmask[phasemask], phase[phasemask], 'o-')"
+    "phasemask = (fmask>2500) & (fmask<3000)\n",
+    "plt.plot( fmask, amp)\n",
+    "# plt.plot(fmask[phasemask], phase[phasemask], 'o-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp25 = amp \n",
+    "f25 = fmask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp10 = amp\n",
+    "f10 = fmask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp20 = amp\n",
+    "f20 = fmask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp15 = amp\n",
+    "f15 = fmask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp20 = amp20[f20>2000.01]\n",
+    "f20 = f20[f20>2000.01]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fonts = 20\n",
+    "tickparams = 18\n",
+    "\n",
+    "plt.figure(figsize=(9,6))\n",
+    "# plt.plot(f10/1e3, amp10*1e3, c='darkred')\n",
+    "plt.plot(f15/1e3, amp15*1e3, c='darkred')\n",
+    "plt.plot(f20/1e3, amp20*1e3, c='darkred')\n",
+    "plt.plot(f25/1e3, amp25*1e3, c='darkred')\n",
+    "\n",
+    "plt.tick_params(axis=\"both\",direction=\"in\", labelsize=tickparams, bottom='True', top='True', left='True', right='True', \n",
+    "                length=4, width=1, which = 'major')\n",
+    "\n",
+    "plt.ylabel('Amplitude (mV)',fontsize=fonts)#, rotation=270)\n",
+    "plt.xlabel('Frequency (MHz)',fontsize=fonts)\n",
+    "\n",
+    "plt.xlim([1.5, 3])\n",
+    "\n",
+    "\n",
+    "#folder = \"C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\\\\Mn3Ge\\\\Conferences\\\\March Meeting 2020\\\\Presentation\"\n",
+    "name = folder + project + '\\\\4K_scan'\n",
+    "filetype = '.png'\n",
+    "plt.savefig(name+filetype, bbox_inches='tight', dpi=500)"
    ]
   },
   {
