--- a/elastic_constants/import binaries.ipynb
+++ b/elastic_constants/import binaries.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.7.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "from scipy.optimize import curve_fit\n",
     "import circle_fit as cf\n",
     "from sklearn.datasets import make_circles\n",
+    "import scipy\n",
     "\n",
     "%matplotlib qt"
    ]
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 129
+     "execution_count": 9
     }
    ],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 106
+     "execution_count": 18
     }
    ],
    "source": [
@@ -118,28 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\Florian\\\\Box Sync\\\\Projects\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201211\\\\4.04470K_2500_3050_2.00000V_0.00000T_Dec11-2020__15-58-12_001_121120.bin']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 107
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-262d01306df9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfilenames\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mfilenames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
-    "filenames = [filenames[3]]\n",
+    "filenames = [filenames[1]]\n",
     "filenames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 109
+     "execution_count": 21
     }
    ],
    "source": [
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,29 +224,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1cc160af1f0>"
+       "<matplotlib.collections.PathCollection at 0x15455605cc0>"
       ]
      },
      "metadata": {},
-     "execution_count": 112
+     "execution_count": 38
     }
    ],
    "source": [
-    "mask = (fflat>2500.01) & (fflat<3000)\n",
+    "# mask = (fflat>2500.01) & (fflat<3000)\n",
     "# mask = (fflat>968.2) & (fflat<968.86)\n",
+    "mask = (fflat>1530.6501) & (fflat<1531.03)\n",
     "fmask = fflat[mask]\n",
     "xmask = xflat[mask]\n",
     "ymask = yflat[mask]\n",
     "\n",
-    "fitmask = (fmask > 2500.01) | (fmask < 3000)\n",
+    "# fitmask = (fmask > 2500.01) | (fmask < 3000)\n",
     "# fitmask = (fmask > 968.83) | (fmask < 968.23)\n",
+    "fitmask = (fmask<1530.715) | (fmask>1530.967)\n",
     "ffitmask = fmask[fitmask]\n",
     "xfitmask = xmask[fitmask]\n",
     "yfitmask = ymask[fitmask]\n",
@@ -266,18 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cc109a54f0>]"
+       "[<matplotlib.lines.Line2D at 0x15458b7d160>]"
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 39
     }
    ],
    "source": [
@@ -289,9 +293,98 @@
     "phase = phase / max(phase) * max(amp)/2 + max(amp)/2\n",
     "\n",
     "phasemask = (fmask>2500) & (fmask<3000)\n",
+    "plt.figure()\n",
     "plt.plot( fmask, amp)\n",
     "# plt.plot(fmask[phasemask], phase[phasemask], 'o-')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1530.8389135940683 [1530.81332077 1530.86434441] 0.051023638853394004 30002.542899627777\n"
+     ]
+    }
+   ],
+   "source": [
+    "fint = np.linspace(min(fmask), max(fmask), int(1e5))\n",
+    "ampint = scipy.interpolate.interp1d (fmask, amp, 'cubic')(fint)\n",
+    "\n",
+    "fres = fint[ abs( ampint-max(ampint) ) == 0 ] [0]\n",
+    "fwidth = fint[ abs(ampint - max(ampint/2)) < 2e-8 ]\n",
+    "fwhm = ( max(fwidth) - min(fwidth) )\n",
+    "\n",
+    "Q = fres/fwhm\n",
+    "\n",
+    "print (fres, fwidth, fwhm, Q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.arrow(shift3-4.3, -3.8, 1.2, 0, head_width=.4, head_length=.4, color='black')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7,5.5))\n",
+    "plt.plot(fmask, amp*1e3, 'o-', zorder=0)\n",
+    "# plt.plot(fint, ampint*1e3)\n",
+    "\n",
+    "plt.arrow(fres, max(ampint/2)*1e3, fwhm/2, 0, head_width=0.02, head_length=0.01, linewidth=2, color='black', length_includes_head=True, zorder=1)\n",
+    "plt.arrow(fres, max(ampint/2)*1e3, -fwhm/2, 0, head_width=0.02, head_length=0.01, linewidth=2, color='black', length_includes_head=True, zorder=1)\n",
+    "\n",
+    "plt.ylabel(' Amplitude (mV) ',fontsize=18)\n",
+    "plt.xlabel('Frequency (kHz)',fontsize=18)\n",
+    "plt.tick_params(axis=\"both\",direction=\"in\", labelsize=17, bottom='True', top='True', left='True', right='True', length=4, width=1, which = 'major')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -806,9 +899,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'resonances' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-929e1eb7a5fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresonances\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Temperature (K)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Resonance Frequency (kHz)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfontsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m plt.tick_params(axis=\"both\",direction=\"in\", labelsize=20, bottom='True', top='True', left='True', right='True', \n",
+      "\u001b[1;31mNameError\u001b[0m: name 'resonances' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plt.figure(figsize=(11,7))\n",
     "plt.plot(T, resonances)\n",
